--- a/Flix-CodePath-2020/Base.lproj/Main.storyboard
+++ b/Flix-CodePath-2020/Base.lproj/Main.storyboard
@@ -1,24 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movies View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MoviesViewController" customModule="Flix_CodePath_2020" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cX5-fv-Lpv">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="188" id="pAL-14-Qbe" customClass="MovieCell" customModule="Flix_CodePath_2020" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="188"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pAL-14-Qbe" id="hoX-Qz-92V">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="188"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="88h-aQ-UNc">
+                                                    <rect key="frame" x="20" y="20" width="108" height="148"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="148" id="XNw-Ah-3Nb"/>
+                                                        <constraint firstAttribute="width" constant="108" id="cfW-P5-n1k"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKJ-l7-sX7">
+                                                    <rect key="frame" x="148" y="20" width="246" height="24"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXD-gL-PPP">
+                                                    <rect key="frame" x="148" y="64" width="246" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ZXD-gL-PPP" firstAttribute="top" secondItem="WKJ-l7-sX7" secondAttribute="bottom" constant="20" id="5yk-bq-dbi"/>
+                                                <constraint firstAttribute="trailing" secondItem="WKJ-l7-sX7" secondAttribute="trailing" constant="20" id="7m9-Az-QZS"/>
+                                                <constraint firstItem="ZXD-gL-PPP" firstAttribute="leading" secondItem="88h-aQ-UNc" secondAttribute="trailing" constant="20" id="DOo-mu-oCG"/>
+                                                <constraint firstItem="WKJ-l7-sX7" firstAttribute="leading" secondItem="88h-aQ-UNc" secondAttribute="trailing" constant="20" id="TEY-Zm-1tf"/>
+                                                <constraint firstItem="88h-aQ-UNc" firstAttribute="top" secondItem="hoX-Qz-92V" secondAttribute="top" constant="20" id="VKB-n5-j0C"/>
+                                                <constraint firstAttribute="trailing" secondItem="ZXD-gL-PPP" secondAttribute="trailing" constant="20" id="aMs-er-c4r"/>
+                                                <constraint firstItem="WKJ-l7-sX7" firstAttribute="top" secondItem="hoX-Qz-92V" secondAttribute="top" constant="20" id="chH-yg-uy5"/>
+                                                <constraint firstItem="88h-aQ-UNc" firstAttribute="leading" secondItem="hoX-Qz-92V" secondAttribute="leading" constant="20" id="g4U-Is-A6P"/>
+                                                <constraint firstAttribute="bottom" secondItem="88h-aQ-UNc" secondAttribute="bottom" constant="20" id="jOe-Y9-Q4k"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="movieDescription" destination="ZXD-gL-PPP" id="Gkw-2T-bI0"/>
+                                            <outlet property="movieTitle" destination="WKJ-l7-sX7" id="49c-sm-UVA"/>
+                                            <outlet property="posterImageView" destination="88h-aQ-UNc" id="UjP-7j-bYG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="cX5-fv-Lpv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8Ll-aW-Eq0"/>
+                            <constraint firstAttribute="trailing" secondItem="cX5-fv-Lpv" secondAttribute="trailing" id="Gzd-xR-gSs"/>
+                            <constraint firstAttribute="bottom" secondItem="cX5-fv-Lpv" secondAttribute="bottom" id="ih0-lH-7HI"/>
+                            <constraint firstItem="cX5-fv-Lpv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lJj-gl-FR1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="cX5-fv-Lpv" id="DR1-qb-MDU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
